# parquetb

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: log_service.proto
src/: log_service.rs  main.rs  parquetb_service.rs
src/client/: mod.rs  send_log.rs
src/utils/: build_schema.rs  infer_metadata_schema.rs  log_entry_to_arrays.rs  mod.rs  truncate_to_minute.rs  write_parquet_file.rs
test/: stream.sh
